# workflow

./: .env  Cargo.toml  README.md
src/: apps.rs  db_operations.rs  logs.rs  main.rs  pomodoro.rs  projects.rs  stats.rs  tasks.rs
src/db_operations/: apps.rs  logs.rs  mod.rs  projects.rs  stats.rs  tasks.rs
src/lib/: lib.rs  models.rs  schema.rs
