[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres","chrono"] }
dotenvy = "0.15"
whoami = "1.5.1"
regex="1.5"
chrono="0.4.37"
comfy-table = "7.1.0"
crossterm = "0.22"
termion = "*"

[dependencies.tui]
version = "0.16"
features = ["crossterm"]



[lib]
name = "workflow"
path = "src/lib/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

